@@ -1,3 +1,10 @@
+2011-06-06  Xavier Queralt  <xqueralt@flumotion.com>
+
+	* flumotion/component/encoders/aac/aac.py:
+	* flumotion/component/encoders/aac/aac.xml:
+	Let the channels to be configurable so the caps negotiation doesn't
+	end always in a mono output
+
 2010-10-06  Marc-André Lureau  <mlureau@flumotion.com>
 
 	reviewed by: Andoni Morales
